# experimental-3d-engine

./: .gitmodules  README.md
experimental-3d-engine/: CMakeLists.txt
experimental-3d-engine/experimental-3d-engine/: CMakeLists.txt  experimental-3d-engine.cpp  experimental-3d-engine.h
experimental-3d-engine/experimental-3d-engine/include/: Config.h  CoreWindow.h  Engine.h  RenderModule.h  ShaderSources.h
experimental-3d-engine/experimental-3d-engine/include/glad/: gl.h  wgl.h
experimental-3d-engine/experimental-3d-engine/include/utils/: FunctionHolder.hpp  OpenGLVersion.hpp  Shader.h  WindowResolution.hpp
experimental-3d-engine/experimental-3d-engine/source/: CoreWindow.cpp  glad_impl.cpp  main.cpp
